# TorexOS

./: .gitignore  Makefile  README.md
bootsect/: Makefile  setting.inc  stage1.s  stage2.s
kernel/: CMakeLists.txt  Makefile  early_main.nasm  early_main.s  kernel.ld  main.cpp  memory_map.md
kernel/include/: address.h  compiler.h  cpp_constructor.h  cursor.h  intrins.h  vgaout.h
kernel/include/acpi/: apic.h  fadt.h  rsdt.h
kernel/include/arch/: GDT.h  IDT.h  TSS.h  context.h  interrupt.h  mminit.h  pagetable.h
kernel/include/debug/: debug.h  logger.h
kernel/include/drivers/: driver.h
kernel/include/drivers/ps2/: keyboard.h  ps2.h
kernel/include/drivers/timer/: cmos.h  pit.h  rdtsc.h
kernel/include/keyboard/: scancode.hpp
kernel/include/memory/: GDT.h  IDT.h  TSS.h  address.h  buddy.h  memscan.h  mm.h  pageframe.h  pagetable.h  slub.h
kernel/include/pic8259/: pic8259.h
kernel/include/process/: idletask.h  pid.h  process.h  sched_timer.h  scheduler.h  simple_scheduler.h
kernel/include/util/: interrupt_lock.h  porthelp.h
kernel/include/vga/: cursor.h  vgaout.h
kernel/lib/: CMakeLists.txt  Makefile
kernel/lib/include/: linear_allocator.h  raw_ostream.h  stringutil.h
kernel/lib/include/algo/: algobase.h  base.h  functional.h  heap.h  iterator.h  new.h  sort.h  type_trait.h  utility.h
kernel/lib/include/alloc_policy/: default_allocator.h  linear_allocator.h  pool_allocator.h
kernel/lib/include/datastruc/: CircularQueue.h  bitmap.h  bitset.h  com_string.h  delay_constructor.h  forward_list.h  initializer_list.h  list.h  optional.h  string_view.h
kernel/lib/include/math/: abs.h  gcd.h  ilog2.h
kernel/lib/include/meta/: type_trait.h
kernel/lib/include/thread/: mutex.h
kernel/lib/include/time/: duration.h
kernel/lib/src/: raw_ostream.cpp  stringutil.cpp
kernel/lib/src/datastruc/: com_string.cpp
kernel/lib/test/: algo_sort_test.cpp  my_forward_list_test.cpp  raw_ostream_test.cpp  stringutil_test.cpp
kernel/src/: cursor.cpp  early_main.nasm  main.cpp  vgaout.cpp
kernel/src/acpi/: rsdt.cpp
kernel/src/arch/: ISR.nasm  early_main.nasm  interrupt.cpp  mminit.cpp  switching.nasm
kernel/src/debug/: debug.cpp  logger.cpp
kernel/src/drivers/ps2/: keyboard.cpp  ps2.cpp
kernel/src/drivers/timer/: cmos.cpp  pit.cpp
kernel/src/keyboard/: scancode.cpp
kernel/src/memory/: buddy.cpp  memscan.cpp  mm.cpp  pageframe.cpp  slub.cpp
kernel/src/pic/: pic.cpp
kernel/src/pic8259/: pic8259.cpp
kernel/src/process/: idletask.cpp  pid.cpp  process.cpp  scheduler.cpp  simple_scheduler.cpp
kernel/src/vga/: cursor.cpp  vgaout.cpp
kernel/tools/: padding.py
stub/: CMakeLists.txt
